

Name: Harmoni ChangeLog


v. 0.7.3 (2006-08-02)
----------------------------------------------------
		
	* Bug Fix: Repository: Now enforces deleting of file/thumbnail data properly. Previously, file records were being orphened when assets were deleted. (Adam Franco)
		
	* Bug Fix: Authorization: Now calls addslashes() on agent and group ids to prevent errors when those ids contain apostrophes. (Adam Franco)
		
	* Bug Fix: Logging: Improved performance of the LogEntryIterator to make a more reponsive interface. (Adam Franco)
		
	* Change: Logging: Errors now log the query string as well as the referer to better trace errors. (Adam Franco)
	
v. 0.7.2 (2006-07-21)
----------------------------------------------------
		
	* Bug Fix: ImageProcessor: Now doesn't try to convert text files as images. (Adam Franco)
	
v. 0.7.1 (2006-06-20)
----------------------------------------------------
		
	* Bug Fix: AuthZ: Quotes in Group Ids were breaking queries. (Adam Franco)
	
v. 0.7.0 (2006-06-16)
----------------------------------------------------
		
	**** IMPORTANT *** Change: The following 9 queries need to be run on a Harmoni 0.6.x database to upgrade it to support the needs of Harmoni 0.7.0: ALTER TABLE `dm_schema` ADD `active` TINYINT( 1 ) UNSIGNED DEFAULT '1' NOT NULL AFTER `revision` ; ALTER TABLE `dr_authoritative_values` ADD `fk_repository` VARCHAR( 100 ) NOT NULL AFTER `fk_partstructure` ; ALTER TABLE `dr_authoritative_values` DROP PRIMARY KEY; ALTER TABLE `dr_authoritative_values` DROP INDEX `fk_partstructure` , ADD INDEX `fk_partstructure` ( `fk_partstructure` , `fk_repository` ) ; ALTER TABLE `dr_authoritative_values` CHANGE `value` `value` VARCHAR( 240 ) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL ; DROP TABLE `dr_authority_options` ; ALTER TABLE `log_agent` ADD PRIMARY KEY ( `fk_entry` , `fk_agent` ) ; ALTER TABLE `log_entry` ADD INDEX ( `log_name` ); ALTER TABLE `log_node` ADD PRIMARY KEY ( `fk_entry` , `fk_node` ) ; (Adam Franco)
		