@@ -1,12 +1,12 @@
 <?php
 /**
  * @since 5/4/05
- * @package harmoni.primitives.chronology
+ * @package harmoni.chronology
  * 
  * @copyright Copyright &copy; 2005, Middlebury College
  * @license http://www.gnu.org/copyleft/gpl.html GNU General Public License (GPL)
  *
- * @version $Id: Date.class.php,v 1.2 2006/06/26 12:55:07 adamfranco Exp $
+ * @version $Id: Date.class.php,v 1.1.2.1 2006/08/02 19:43:09 adamfranco Exp $
  *
  * @link http://harmoni.sourceforge.net/
  * @author Adam Franco <adam AT adamfranco DOT com> <afranco AT middlebury DOT edu>
@@ -35,12 +35,12 @@ require_once(dirname(__FILE__)."/DateAndTime.class.php");
  *		- {@link yesterday Date::yesterday()}
  * 
  * @since 5/4/05
- * @package harmoni.primitives.chronology
+ * @package harmoni.chronology
  * 
  * @copyright Copyright &copy; 2005, Middlebury College
  * @license http://www.gnu.org/copyleft/gpl.html GNU General Public License (GPL)
  *
- * @version $Id: Date.class.php,v 1.2 2006/06/26 12:55:07 adamfranco Exp $
+ * @version $Id: Date.class.php,v 1.1.2.1 2006/08/02 19:43:09 adamfranco Exp $
  *
  * @link http://harmoni.sourceforge.net/
  * @author Adam Franco <adam AT adamfranco DOT com> <afranco AT middlebury DOT edu>
@@ -122,8 +122,11 @@ class Date
 	function &fromString ( $aString, $class = 'Date' ) {
 		$parser =& StringParser::getParserFor($aString);
 		
-		if (!$parser)
-			die("'".$aString."' is not in a valid format.");
+		if (!$parser){
+ 			$null = null;
+ 			return $null;
+			// die("'".$aString."' is not in a valid format.");
+		}
 		
 		eval('$result =& '.$class.'::withYearMonthDay($parser->year(),
 						$parser->month(), $parser->day(), $class);');
